app/assets/stylesheets/bootswatch_overrides.css.scss
body {
  padding-top: $navbar-actual-height;
  background-image: image_url('patterns/lightpaperfibers.png');
}

#body-content {
  position: relative;
}

.container {
  overflow: hidden;
}

.centered-content {
  text-align: center;
}

input[type=text] {
  @extend .form-control;
}

@include all-h-tags {
  @extend .clearfix;
  .btn {
    float:right;
    display: inline-block;
  }
}

.navbar {

  margin-bottom: 0;
  .navbar-collapse.in {
    overflow: visible;
  }
  &.navbar-inverse {
    @media (min-width: $screen-sm-min) {
      border-bottom-width: 1px;
      border-bottom-style: solid;
      border-bottom-color: $gray-lighter;
    }
  }
  @media (min-width: $screen-sm-min) {
    .navbar-form {
      margin-top:11px;
    }
  }

  .navbar-toggle {
    margin-top:12px;
  }

  @media (min-width: $screen-sm-min) {
    .navbar-search-form {
      padding-left: 0;
      padding-right: 0;

      .input-group {
        width:325px;
      }
    }
  }
}

.breadcrumb {
  margin-top: 22px;
  margin-bottom: 0;
}

.dropdown-menu {
  &.dropdown-right {
    right:inherit;
    left:0px;
  }
  &.dropdown-left {
    left:inherit;
    right:0px;
  }
}

#footer {
}

#tiny-options {
  font-family: $font-family-monospace;
  position: absolute;
  font-size: 80%;
  text-align: center;
  left:0;
  right:0;
  bottom: 3px;
}

@media (max-width: $screen-xs-min) {
  .jumbotron{
    padding: 6px 12px;
    margin-left: -12px;
    margin-right: -12px;
  }
}

